<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/activity_login_fragment_container"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:weightSum="4"
                tools:context="org.lammsecure.lammsecureamass.activities.LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/firebase_icon"
            style="@style/ThemeOverlay.FirebaseIcon"
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:contentDescription="@string/desc_lamm_icon"
            android:src="@drawable/app_icon"/>

        <TextView
            android:id="@+id/status"
            style="@style/ThemeOverlay.MyTextDetail"
            android:text="@string/signed_out"/>

    </LinearLayout>

    <ProgressBar
        android:layout_marginTop="24dp"
        android:id="@+id/activity_user_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:indeterminate="true"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_google_signin_light_normal"
            android:text="@string/sign_in"
            android:textColor="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.MyDarkButton"/>

        <Button
            android:id="@+id/already_registered_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/btn_registered_normal"
            android:text="@string/already_registered"
            android:theme="@style/ThemeOverlay.MyDarkButton"/>

    </LinearLayout>
</RelativeLayout>
